# polars-playground

./: .env.template  .gitignore  LICENSE.md  Makefile  README.md  amazon_reviews_dataset.ipynb  main.py  pl_utils.py  polars.ipynb  polars_documentation.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
