[project]
name = "polars-playground"
version = "0.1.0"
description = "A Basic Template Dev Container for Data Analysis and Data Pipeline Project in Python with Duck DB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pip>=25.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "ruff>=0.13.1",
]
