[project]
name = "polars-playground"
version = "0.1.0"
description = "A Basic Template Dev Container for Data Analysis and Data Pipeline Project in Python with Duck DB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.13",
    "nbqa>=1.9.1",
    "pandas>=2.3.2",
    "pip>=25.2",
    "plotly[express]>=6.3.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "ruff>=0.13.1",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
